--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,10 +12,11 @@ itertools = "0.14.0"
 ollama-rs = "0.2.6"
 openai = "1.0.0"
 qdrant = "0.0.0"
-qdrant-client = "1.13.0"
+qdrant-client = { version = "1.13.0" }
 reqwest = "0.12.15"
 serde = { version = "1.0.219", features = ["alloc", "derive", "serde_derive"] }
 serde_json = "1.0.140"
+serde_plain = "1.0.2"
 strum = { version = "0.27.1", features = ["derive"] }
 thiserror = "2.0.12"
 tokio = { version = "1.44.1", features = ["full", "tracing"] }
