--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,4 +32,5 @@ tree-sitter-rust = "0.23.2"
 tree-sitter-toml = "0.20.0"
 tree-sitter-typescript = "0.23.2"
 url = { version = "2.5.4", features = ["serde"] }
+uuid = { version = "1.16.0", features = ["v4", "serde"] }
 walkdir = "2.5.0"
